fix bug with non display placemark and scrollbars on some displays; refactoring

--- a/public/index.css
+++ b/public/index.css
@@ -38,6 +38,7 @@
     --primary-color: #FF9E00;
     --secondary-color: #32466B;
     --email-color: #47BAEA;
+    --tertiary-color: #A4A4A4;
 }
 
 .clickable:hover {
